[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Shop.gd" type="Script" id=1]
[ext_resource path="res://Assets/TimesNewPixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Coin.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Heart.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="Shop" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 364.0
color = Color( 0.145098, 0.160723, 0.545098, 0.392157 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 640.0
margin_bottom = 364.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 100.0
rect_min_size = Vector2( 640, 100 )
custom_fonts/font = SubResource( 1 )
text = "Shop"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 640.0
margin_bottom = 364.0
rect_min_size = Vector2( 640, 260 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 55.0
margin_top = 30.0
margin_right = 585.0
margin_bottom = 230.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 174.0
margin_bottom = 200.0
rect_min_size = Vector2( 160, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 167.0
margin_bottom = 193.0
rect_min_size = Vector2( 160, 40 )
custom_fonts/font = SubResource( 2 )
text = "Coin +20"

[node name="Coin" parent="VBoxContainer/CenterContainer/HBoxContainer/PanelContainer" instance=ExtResource( 3 )]
position = Vector2( 87.2649, 56.1628 )
scale = Vector2( 3, 3 )

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 178.0
margin_right = 352.0
margin_bottom = 200.0
rect_min_size = Vector2( 160, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 167.0
margin_bottom = 193.0
rect_min_size = Vector2( 160, 40 )
custom_fonts/font = SubResource( 3 )
text = "Chance to x2"

[node name="Coin" parent="VBoxContainer/CenterContainer/HBoxContainer/PanelContainer2" instance=ExtResource( 3 )]
position = Vector2( 87.2649, 56.1628 )
scale = Vector2( 3, 3 )

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 356.0
margin_right = 530.0
margin_bottom = 200.0
rect_min_size = Vector2( 160, 200 )

[node name="Button3" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer/PanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 167.0
margin_bottom = 193.0
rect_min_size = Vector2( 160, 40 )
custom_fonts/font = SubResource( 4 )
text = "Heal 15"

[node name="Heart" parent="VBoxContainer/CenterContainer/HBoxContainer/PanelContainer3" instance=ExtResource( 4 )]
position = Vector2( 82.5248, 56.1628 )
scale = Vector2( 3, 3 )

[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/PanelContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/PanelContainer2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/PanelContainer3/Button3" to="." method="_on_Button3_pressed"]
